
%%%%%%%%%%%%%%%%%%% GV 3.7.4 (March 2022) %%%%%%%%%%%%%%%%%%%%%%%%%%

# Add -dDELAYSAFER to GV.gsCmdScanPDF for gs 9.56.
# Change -sDEVICE=pswrite to -sDEVICE=ps2write in GV.gsCmdConvPDF for gs 9.
# Set LC_ALL=C if it is unset to fix "Missing charsets in String to FontSet conversion" warnings.
# Fix a bug where very long environment variables could crash gv.
# Use make -j in scripts/makedist.sh.
# Update .gitignore.

%%%%%%%%%%%%%%%%%%% GV 3.7.4 (April 2021) %%%%%%%%%%%%%%%%%%%%%%%%%%

# Change the digit '9' function to rotate 90 degrees clockwise.
# Change the digit '0' function to scale to 100%.
# Change the cursor location format from '%d x %d' to '%d, %d'.
# Restore left and right buttons to move and middle button to zoom.
# Remove a tab in the 'Natural sizes' resource string.
# Fix a possible bad access closing pipes.
# Fix 'broken pipe' typo.
# Fix some help and documentation typos.
* Prefix sed with LC_ALL=C because GV.ad has 8-bit Latin-1 ISO text.
* Remove -g from src/Makefile.am because it should be set by configure.
* scripts/makedist.sh passes its arguments to ./configure to simplify
  building CFLAGS=-O2 or --with-default-papersize=Letter .

%%%%%%%%%%%%%%%%%%% GV 3.7.4 (March 2013) %%%%%%%%%%%%%%%%%%%%%%%%%%

# Fixed CVE-2012-3386 (by using updated automake)
# Fixed bug-gv] Problem after saving gv-settings
# improve wording of gv-update-userconfig manual
# Scrolling and memory access improved
# README.I18N adjusted for libXaw3d 1.6.x
# Fixed GNU gv 3.6.4 - 3.7.3 page selector button geometry bug

%%%%%%%%%%%%%%%%%%% GV 3.7.3.90 (March 2012) %%%%%%%%%%%%%%%%%%%%%%%%%%

# Support for libXaw3d-1.6.x

%%%%%%%%%%%%%%%%%%% GV 3.7.3 (November 2011) %%%%%%%%%%%%%%%%%%%%%%%%%%

# Updated Translations

%%%%%%%%%%%%%%%%%%% GV 3.7.2.90 (October 2011) %%%%%%%%%%%%%%%%%%%%%%%%%%

? Reverted fix of debian bug #594991: unexpected scrolling of the TOC widget",
  this fixes the following bug:
# Pressng END does not scroll TOC wodget.
